<resources>
    <string name="app_name">Loss Finder</string>
    <string name="login_button_text">Zaloguj się</string>
    <string name="email_address">adres email</string>
    <string name="password_forgotten">Nie pamiętam hasła</string>
    <string name="logging_in">Logowanie</string>
    <string name="confirm_password">potwierdź hasło</string>
    <string name="registration">Rejestracja</string>
    <string name="next">Przejdź dalej</string>
    <string name="additional_info">Podaj dodatkowe informacje</string>
    <string name="surname">nazwisko</string>
    <string name="date_of_birth">data urodzenia</string>
    <string name="terms_agreement">Zgadzam się z Regulaminem aplikacji</string>
    <string name="register">Zarejestruj się</string>
    <string name="start_description">Pomóż zgubionym rzeczom powrócić do ich właścicieli</string>
    <string name="start_description_full">Dołącz do społeczności skupionej na pomaganiu zagubionym przedmiotom wrócić do ich właścicieli</string>
    <string name="vulgar_error">Wpisany tekst zawiera wulgarne treści</string>
    <string name="invalid_email_format">format adresu email powinien być zgodny ze wzorem: przyklad@mail.pl</string>
    <string name="field_cannot_be_empty">to pole nie może być puste</string>
    <string name="password_weak">to hasło jest za słabe</string>
    <string name="password">hasło</string>
    <string name="name">imię</string>
    <string name="vulgarities">przekleństwa</string>
    <string name="phone_number">numer telefonu</string>
    <string name="button_ajio">Weryfikuj</string>
    <string name="ajio_banner">AJiO - Demo Fragment</string>
    <string name="phone_number_too_short">numer telefonu powinien zawierać co najmniej 7 znaków</string>
    <string name="found_banner">Znalezione</string>
    <string name="looked_for">Poszukiwane</string>
    <string name="see_more">Zobacz więcej</string>
    <string name="test_location">Kraków, Grzegórzki</string>
    <string name="main_page">Strona\nGłówna</string>
    <string name="wrong_login_credentials">Nieprawidłowe dane logowania</string>
    <string name="forgot_password">Zapomniałeś hasła?</string>
    <string name="forgot_password_desc">Jeżeli nie pamiętasz hasła do swojego konta, skontaktuj się z administratorem za pomocą adresu e-mail:</string>
    <string name="administration_email">maciej.spolnik4@gmail.com</string>
    <string name="close">Zamknij</string>
    <string name="profile">Profil</string>
    <string name="lost">Zagubione</string>
    <string name="found">Znalezione</string>
    <string name="manage_adverts">Moje Ogłoszenia</string>
    <string name="main_page_nav">Przeglądaj</string>
    <string name="edit_profile_data">Edytuj dane profilu</string>
    <string name="save">Zapisz</string>
    <string name="my_posts">Moje ogłoszenia</string>
    <string name="example_credentials">Kamil Snail</string>
    <string name="log_out">Wyloguj się</string>
    <string name="confirm">Potwierdź</string>
    <string name="cancel">Anuluj</string>
    <string name="pick_date">Zaznacz datę urodzenia</string>
    <string name="current_adverts">Aktualne Ogłoszenia</string>
    <string name="edit_profile">Edytuj Profil</string>
    <string name="about_app">O aplikacji</string>
    <string name="your_adverts">Twoje ogłoszenia</string>
    <string name="add_advert">Dodaj nowe ogłoszenie</string>
    <string name="contact_by_email">Skontaktuj się z Osobą zainteresowaną</string>
    <string name="write_email">Napisz email na adres</string>
    <string name="or">lub</string>
    <string name="call">Zadzwoń</string>
    <string name="cancel_adding_confirm">Czy na pewno chcesz anulować dodawanie ogłoszenia?</string>
    <string name="delete_advert_confirm">Czy na pewno chcesz usunąć ogłoszenie?</string>
    <string name="registration_successful">Rejestracja przebiega pomyślnie</string>
    <string name="error_api">Nie udało się połączyć. Spróbuj ponownie.</string>
    <string name="example_email">email@email.com</string>
    <string name="unknown_date">Nieznana data</string>
</resources>